fix DT-2200, scale down linked in widget for mobile so it doesn't get cut off

--- a/less/widgets/widgets-all.less
+++ b/less/widgets/widgets-all.less
@@ -23,6 +23,7 @@
 // 10.   #Divider
 // 11.   #Yelp
 // 12.   #Messages
+// 13.   #Linkedin
 
 
 
@@ -875,4 +876,12 @@ hr.rule {
 
 
 
+// -----------------------------
+// 13. #Linkedin
+// -----------------------------
 
+.linkedincompanyprofile {
+    @media @bp-mobile {
+        transform: scale(0.8);
+    }
+}
